# park_tespit

./: .gitignore  Birsav_akilli_park.kml  Birsav_akilli_park2.kml  Birsav_akilli_park3.kml  Birsav_akilli_park4.kml  Birsav_akilli_park5.kml  Birsav_akilli_park6.kml  Dockerfile  Dockerfile.app  Dockerfile.base  KULLANIM.md  bytetrack_birsav.yaml  canli_kalibrasyon.py  demo.html  docker-compose.optimized.yml  docker-compose.yml  kalibrasyon.py  kml_to_json.py  koordinatlar.txt  map_api.py  otopark_demo.html  otoparklar.json  panel.html  park.py  park1802v1.py  park_deneme.py  park_detector.py  park_koordinatlari.pkl  park_koordinatlari_yeni.pkl  park_master.py  park_master_otonom.py  park_secici.py  park_yedek.py  parkvideolu.py  pyproject.toml  requirements.txt  system_state.json  yedek_parkpy.py
.claude/: settings.local.json
.github/workflows/: ci.yml
park_env/: pyvenv.cfg
park_env/Scripts/: activate  activate.bat
park_tespit/: __init__.py  detector.py
