[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "park-tespit"
version = "1.0.0"
description = "AI tabanli otopark tespit sistemi"
readme = "KULLANIM.md"
requires-python = ">=3.9"
dependencies = [
    "opencv-python>=4.8.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "pillow>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
include = ["park_tespit*"]
